--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <div class="row row-space-2">
                         <div class="col-sm-4 sm-margin-b-4">
                             <!-- Pricing -->
-                            <div class="pricing">
+                            <!--<div class="pricing">
                                 <div class="margin-b-30">
                                     <i class="pricing-icon icon-chemistry"></i>
                                     <h3>Starter Kit <span> - $</span> 49</h3>
@@ -260,7 +260,7 @@
                                     <li class="pricing-list-item">50 Users Panels</li>
                                 </ul>
                                 <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
-                            </div>
+                            </div>-->
                             <!-- End Pricing -->
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
@@ -268,21 +268,23 @@
                             <div class="pricing pricing-active">
                                 <div class="margin-b-30">
                                     <i class="pricing-icon icon-badge"></i>
-                                    <h3>Professional <span> - $</span> 149</h3>
-                                    <p>Lorem ipsum dolor amet consectetur ut consequat siad esqudiat dolor</p>
+                                    <h3>Шавлинские озера, Алтай - 15 000 руб.</h3>
+                                    <p>Получи незабываемые впечатления</p>
                                 </div>
                                 <ul class="list-unstyled pricing-list margin-b-50">
-                                    <li class="pricing-list-item">Basic Features</li>
-                                    <li class="pricing-list-item">Up to 100 products</li>
-                                    <li class="pricing-list-item">100 Users Panels</li>
+									<li class="pricing-list-item">Регион: Северо — Чуйский Хребет, Республика Алтай</li>
+                                    <li class="pricing-list-item">Длтельность: 15 дней</li>
+                                    <li class="pricing-list-item">Сложность: средняя</li>
+                                    <li class="pricing-list-item">Старт: Барнаул</li>
+									<li class="pricing-list-item">Конец: Барнаул</li>
                                 </ul>
-                                <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
+                                <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Записаться</a>
                             </div>
                             <!-- End Pricing -->
                         </div>
                         <div class="col-sm-4">
                             <!-- Pricing -->
-                            <div class="pricing">
+                            <!--<div class="pricing">
                                 <div class="margin-b-30">
                                     <i class="pricing-icon icon-shield"></i>
                                     <h3>Advanced <span> - $</span> 249</h3>
@@ -294,7 +296,7 @@
                                     <li class="pricing-list-item">Unlimited Users Panels</li>
                                 </ul>
                                 <a href="pricing.html" class="btn-theme btn-theme-sm btn-default-bg text-uppercase">Choose</a>
-                            </div>
+                            </div>-->
                             <!-- End Pricing -->
                         </div>
                     </div>
