--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h1 class="promo-block-title">Ходим в горы</h1>
                     <p class="promo-block-text">Поход твоей мечты...</p>
                 </div>
-                <a class="js_popup-youtube btn-theme btn-theme-md btn-white-bg text-uppercase" href="https://www.youtube.com/watch?v=On8xPdDCytg&t=1s" title="Смотреть"><i class="btn-icon icon-control-play"></i>Вступительное видео</a>
+                <a class="js_popup-youtube btn-theme btn-theme-md btn-white-bg text-uppercase" href="https://youtu.be/On8xPdDCytg" title="Смотреть"><i class="btn-icon icon-control-play"></i>Вступительное видео</a>
             </div>
         </div>
         <!--========== SLIDER ==========-->
@@ -159,7 +159,7 @@
                                     <h3>Байкал</h3>
                                     <p class="margin-b-5">Смотреть фото</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="index_g_baikal.html" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
@@ -171,7 +171,7 @@
                                     <h3 class="color-white">Алтай</h3>
                                     <p class="color-white margin-b-5">Смотреть фото</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="index_g_altai.html" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -183,7 +183,7 @@
                                     <h3>Кавказ</h3>
                                     <p class="margin-b-5">Смотреть фото</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="index_g_kavkaz.html" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                     </div>
