--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Ходим в горыЫЫЫЫЫЫ</title>
+        <title>Ходим в горы</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
         <meta content="" name="description"/>
@@ -77,7 +77,7 @@
         <div class="promo-block">
             <div class="container">
                 <div class="margin-b-40">
-                    <h1 class="promo-block-title">Ходим в горы</h1>
+                    <h1 class="promo-block-title">Ходим в горы ПОТОМУ ЧТО МЫ ЕГОРЫ</h1>
                     <p class="promo-block-text">Поход твоей мечты...</p>
                 </div>
                 <a class="js_popup-youtube btn-theme btn-theme-md btn-white-bg text-uppercase" href="https://youtu.be/On8xPdDCytg" title="Смотреть"><i class="btn-icon icon-control-play"></i>Вступительное видео</a>
