--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h1 class="promo-block-title">Ходим в горы ПОТОМУ ЧТО МЫ ЕГОРЫ</h1>
                     <p class="promo-block-text">Поход твоей мечты...</p>
                 </div>
-                <a class="js_popup-youtube btn-theme btn-theme-md btn-white-bg text-uppercase" href="https://youtu.be/On8xPdDCytg" title="Смотреть"><i class="btn-icon icon-control-play"></i>Вступительное видео</a>
+                <a class="js_popup-youtube btn-theme btn-theme-md btn-white-bg text-uppercase" href="https://youtu.be/embed/On8xPdDCytg?rel=0" title="Смотреть"><i class="btn-icon icon-control-play"></i>Вступительное видео</a>
             </div>
         </div>
         <!--========== SLIDER ==========-->
