--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="promo-block">
             <div class="container">
                 <div class="margin-b-40">
-                    <h1 class="promo-block-title">Ходим в горы ПОТОМУ ЧТО МЫ ЕГОРЫ</h1>
+                    <h1 class="promo-block-title">Ходим в горы</h1>
                     <p class="promo-block-text">Поход твоей мечты...</p>
                 </div>
                 <a class="js_popup-youtube btn-theme btn-theme-md btn-white-bg text-uppercase" href="https://youtu.be/embed/On8xPdDCytg?rel=0" title="Смотреть"><i class="btn-icon icon-control-play"></i>Вступительное видео</a>
