--- a/index.html
+++ b/index.html
@@ -444,6 +444,8 @@
         <script src="js/components/masonry.min.js" type="text/javascript"></script>
         <script src="js/components/gmap.min.js" type="text/javascript"></script>
 
+        <script src="js/main.js" type="text/javascript"></script>
+
     </body>
     <!-- END BODY -->
 </html>
